--- a/functionsES7/package.json
+++ b/functionsES7/package.json
@@ -2,6 +2,7 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "babel-runtime": "^6.23.0",
     "firebase-admin": "~5.2.1",
     "firebase-functions": "^0.6.2"
   },
