--- a/package.json
+++ b/package.json
@@ -10,22 +10,16 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^4.6.1",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "rimraf": "^2.6.1"
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-latest": "^6.24.1"
   },
   "scripts": {
-    "install:all": "yarn && cd functionsES6 && yarn",
+    "install:all": "yarn && cd functionsES7 && yarn",
     "start": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "build": "react-scripts build && yarn run build:functions",
-    "build:functions": "babel 'functionsES6' --out-dir 'functions' --presets=es2015 --copy-files --ignore 'node_modules' && cd functions && yarn",
+    "build:functions": "babel 'functionsES7' --out-dir 'functions' --presets latest --copy-files --ignore 'node_modules' && cd functions && yarn",
     "deploy": "yarn run build && firebase deploy"
   }
 }
